Atomia Public Order Page v13.4
2013-05-30 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [BUGFIX] Norid check fix
	
2013-05-29 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [IMPROVEMENT] Norid self signed certificate email added in custom data of order line
	- [IMPROVEMENT] Default POP page added NO and NL country check 
	
2013-05-28 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [BUGFIX] Removed swedish organization number formating
	- [BUGFIX] Refactored DomainSpecific part

2013-05-27 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [BUGFIX] PluginScripts include script fixed
	
2013-05-24 Stefan Stankovic <stefan.stankovic@atomia.com>
	- [IMPROVEMENT] PluginScripts and Scripts folders not required in theme customization

2013-05-20 Stefan Stankovic <stefan.stankovic@atomia.com>

	- [IMPROVEMENT] AtomiaServiceExtraProperties gets copy to orderline for AtomiaService CsLinuxWebsite
	- [IMPROVEMENT] OwnDomain flag MainDomain set to true

2013-05-10 Stefan Stankovic <stefan.stankovic@atomia.com>
	
	- [IMPROVEMENT] Norid page added for declaration that is needed for .NO domains. Cart duplicate item check added. new custom order line parameter DomainRegistrySpecificAttributes.

2013-04-29 Stefan Stankovic <stefan.stankovic@atomia.com>

	- [IMPROVEMENT] IE - edge default rendering engine not IE8

2013-04-29 Ivan Kustera <ivan@atomia.com>

	- [NEW] Added support for loading reseller's data based on Order Page url.

2013-04-26 Ivan Kustera <ivan@atomia.com>

	- [NEW] Added support for Adyen payment method.

2013-04-04 Ivan Kustera <ivan@atomia.com>

	- [IMPROVEMENT] Added DK, ES, NO, NL, BR and PT translations to the default theme.

Atomia Public Order Page v13.3

2013-03-30 Ivan Kustera <ivan@atomia.com>

	- [IMPROVEMENT] Added config option AllowOwnDomain which is used to determine whether option for ordering own domain on order page should be displayed or not.

2013-03-24 Ivan Kustera <ivan@atomia.com>
