@@ -107,7 +107,7 @@ ex. Session["qs_exampleString1"]    ViewData["qs_exampleString1"]
       <countryItem code="en-US" name="United States" image="flg_us.png" currency="USD" default="true"/>
     </countriesList>
 	<domainRegistrySpecificProducts>
-		<domainRegistrySpecificProduct productId="DOM_NO" cccEmail="norid@atomia.com" />
+
 	</domainRegistrySpecificProducts>
   </publicOrderConfigurationSection>
   <!--================================================-->
