@@ -1,4 +1,7 @@
 Atomia Public Order Page v13.4
+2013-05-31 Stefan Stankovic <stefan.stankovic@atomia.com>
+	- [BUGFIX] Norid fix of configsection
+	
 2013-05-30 Stefan Stankovic <stefan.stankovic@atomia.com>
 	- [BUGFIX] Norid check fix
 	
